# sequitur

./: .gitignore  CMakeLists.txt  README.md
include/sequitur/concurrency/: RingBuffer.hpp
include/sequitur/core/: MatchingEngine.hpp  Order.hpp  OrderBook.hpp  Trade.hpp
include/sequitur/memory/: ObjectPool.hpp
include/sequitur/utils/: FixedQueue.hpp  Timer.hpp
src/: main.cpp
src/core/: MatchingEngine.cpp
tests/benchmarks/: bench_pure_latency.cpp
tests/integration/: test_matching_engine.cpp
tests/unit/: test_order_struct.cpp  test_orderbook.cpp  test_ringbuffer.cpp
